<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_shelter"
        android:icon="@drawable/ic_home"
        android:title="@string/title_shelter" />
    <!--    android:title="@string/title_home"-->

    <item
        android:id="@+id/navigation_food"
        android:icon="@drawable/ic_food"
        android:title="@string/title_food" />
    <!--    android:title="@string/title_dashboard"  -->
    <!--    android:title="@string/title_notifications"-->

    <item
        android:id="@+id/navigation_transportation"
        android:icon="@drawable/ic_transportation"
        android:title="@string/title_transportation" />

    <item
        android:id="@+id/navigation_clothing"
        android:icon="@drawable/ic_clothing"
        android:title="@string/title_clothing" />

</menu>
