<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_shelter">

    <fragment
        android:id="@+id/navigation_shelter"
        android:name="com.aresix.housingassistant2.ui.shelter.ShelterFragment"
        android:label="@string/title_shelter"
        tools:layout="@layout/fragment_shelter" />

    <fragment
        android:id="@+id/navigation_food"
        android:name="com.aresix.housingassistant2.ui.food.FoodFragment"
        android:label="@string/title_food"
        tools:layout="@layout/fragment_food" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.aresix.housingassistant2.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/navigation_clothing"
        android:name="com.aresix.housingassistant2.ui.clothing.ClothingFragment"
        android:label="@string/title_clothing"
        tools:layout="@layout/fragment_clothing" />
</navigation>