<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorLightGrey">

    <RelativeLayout
        android:id="@+id/WeatherUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/mainWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/curLocation"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/tempSymbol"
                android:src="@drawable/sunny" />

            <TextView
                android:id="@+id/tempSymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/temperature"
                android:text="@string/DegreeCentigrade"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textSize="100sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/curLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/currentLocation"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/todayWea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mainWeather"
            android:layout_centerHorizontal="true"
            android:text="@string/todayWeather"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/line1_03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/todayWea"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/weatherInfo01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pollution"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/weatherInfo02"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/bodyTemperature"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line1_03"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/weatherInfo03"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wind"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/weatherInfo04"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/humidity"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:id="@+id/splitLineCloth"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/WeatherUp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorDarkGrey" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/splitLineCloth"
        android:layout_marginStart="15dp"
        android:text="@string/clothRecommend"
        android:textSize="22sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/splitLineCloth"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/model"
                android:layout_width="330dp"
                android:layout_height="440dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/model0301" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/model"
                android:layout_alignBottom="@id/model"
                android:layout_marginBottom="8dp"
                android:text="@string/moreRecommend"
                android:textColor="@color/colorBlueUrl" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>