<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/framgent_login_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:scaleX="1.3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/login_welcome" />

    <com.aresix.housingassistant2.utils.RoundImageView
        android:id="@+id/roundImageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="252dp"
        android:src="@drawable/avatar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />

    <EditText
        android:id="@+id/sign_up_user_name"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_input"
        android:ems="10"
        android:inputType="textPersonName"
        android:gravity="center"
        android:hint="@string/title_user_name"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundImageView3" />

    <EditText
        android:id="@+id/sign_up_user_password"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_input"
        android:ems="10"
        android:inputType="textPassword"
        android:gravity="center"
        android:hint="@string/title_user_password"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_user_name" />

    <EditText
        android:id="@+id/sign_up_confirm_password"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_input"
        android:ems="10"
        android:inputType="textPassword"
        android:gravity="center"
        android:hint="@string/title_user_password"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_user_password" />

    <Button
        android:id="@+id/sign_up_signInButton"
        android:layout_width="245dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_sign_in_button"
        android:text="@string/title_sign_up"
        android:textColor="#ffffff"
        android:textSize="25dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_confirm_password" />
</androidx.constraintlayout.widget.ConstraintLayout>